@@ -5,6 +5,7 @@ Xfdesktop 4.x.y
   * Handle volume changes in a timeout (bug #7025).
   * Support absolute icon paths in desktop files (bug #7160).
     Patch by xaizek@gmail.com.
+  * Scroll to the selected background in the settings (bug #7087).
 
 
 Xfdesktop 4.8.0
